# hashcat-ntlm-stats

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
hashcat_ntlm_stats/: parser.py
src/hashcat_ntlm_stats/: cli.py  parser.py
src/hashcat_ntlm_stats/parser/: __init__.py  models.py  parse.py
tests/: test_parser.py
tests/fixtures/: cracked_passwords.sample.txt  hashcat_log.sample.txt  user_hashes.sample.ntds
