[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "hashcat-ntlm-stats"
version = "0.1.0"
authors = [ {name = "Glymphie", email = "glymphie@protonmail.com"} ]
description = "Parse and analyse hashcat output"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = ["hashcat", "parse", "analyse", "password", "cracked"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Information Technology",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Repository = "https://github.com/glymphie/hashcat-ntlm-stats.git"
