[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "hashcat-ntlm-stats"
version = "0.1.0"
authors = [ {name = "Glymphie", email = "glymphie@protonmail.com"} ]
description = "Parse and analyse hashcat output"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = ["hashcat", "parse", "analyse", "password", "cracked"]
classifiers = [
  # How mature is this project?
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.urls]
Repository = "https://github.com/glymphie/hashcat-ntlm-stats.git"

[project.scripts]
hashcat-ntlm-stats = "hashcat_ntlm_stats.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=src"
